--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "description": "Form Element for the Flow Form Framework integrating Google's Recaptcha",
     "require": {
         "google/recaptcha": "^1.2",
-        "neos/form": "^4.0 || ^5.0.9",
+        "neos/form": "^4.0 || ^5.0.9 || ^6.0",
         "php": "^8.0"
     },
     "autoload": {
